# terrafabric

./: .gitmodules  CMakeLists.txt  toolchain-mingw64.cmake
assets/shaders/: basic.vert  chunk.frag  chunk.vert  cube.frag  cube.vert  shader.frag  shader.vert  sprite.frag  sprite.vert
build-windows/: CMakeCache.txt
dependencies/glad/include/glad/: glad.h
src/: buffer.h  game.cpp  game.h  logger.cpp  main.cpp  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  shader.cpp  shader.h  vertexarray.cpp  vertexbufferlayout.h  window.h
src/components/: camera.cpp  camera.h  mesh.h  transform.cpp  transform.h
src/core/: application.cpp  application.h  assetmanager.cpp  assetmanager.h  game.cpp  game.h  input.cpp  input.h  raycast.cpp  raycast.h  resourcemanager.cpp  resourcemanager.h  window.cpp  window.h
src/game/: block.h  chunk.cpp  chunk.h  cube.cpp  cube.h  player.cpp  player.h  world.cpp  world.h
src/logging/: logger.h
src/rendering/: buffer.cpp  buffer.h  bufferlayout.cpp  bufferlayout.h  camera.h  indexbuffer.cpp  indexbuffer.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h  uniformbuffer.cpp  uniformbuffer.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.h
